--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- -------------font awsome----------------- -->
     <script src="https://kit.fontawesome.com/2624e4d0a8.js" crossorigin="anonymous"></script>
-
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!----------------- nav start----------------- -->
@@ -30,13 +30,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Shoes</a>
+                <a class="nav-link" href="#shoes">Shoes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Backpard</a>
+                <a class="nav-link" href="#backpard">Backpard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Subscribe</a>
+                <a class="nav-link" href="#Subscribe">Subscribe</a>
               </li>
             </ul>
           </div>
@@ -48,12 +48,12 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                  <div class="row bg-info bg-gradient ps-5 d-flex align-items-center">
+                  <div class="row rjb-color bg-gradient ps-5 d-flex align-items-center">
                      <div class="col-lg-7">
                         <h1>Cool Dude Headphone</h1>
                         <p>This is the best headphone in the world for people who just want to waste time in front of funky world. </p>
                         <h1>$420</h1>
-                        <bnt class=" btn btn-warning">buy now</bnt>
+                        <bnt class=" btn rjb-btn-colur">buy now</bnt>
                      </div> 
                      <div class="col-lg-5">
                         <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -62,14 +62,14 @@
                   </div>
                
               <div class="carousel-item">
-                <div class="row bg-info bg-gradient ps-5 d-flex align-items-center">
+                <div class="row rjb-color bg-gradient ps-5 d-flex align-items-center">
                     <div class="col-lg-7">
                        <h1>Mega LCD TV For Sports</h1>
                        <p>This is the best tv in the world for people who just want to waste time in front of tv.
 
                     </p>
                        <h1>$1200</h1>
-                       <bnt class=" btn btn-warning">buy now</bnt>
+                       <bnt class=" btn rjb-btn-colur">buy now</bnt>
                     </div> 
                     <div class="col-lg-5">
                        <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -77,14 +77,14 @@
                     </div>
                     </div>
               <div class="carousel-item">
-                <div class="row bg-info bg-gradient ps-5 d-flex align-items-center">
+                <div class="row rjb-color bg-gradient ps-5 d-flex align-items-center">
                     <div class="col-lg-7">
                        <h1>X-Box for your living room
                     </h1>
                        <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.
                     </p>
                        <h1>$600</h1>
-                       <bnt class=" btn btn-warning">buy now</bnt>
+                       <bnt class=" btn rjb-btn-colur">buy now</bnt>
                     </div> 
                     <div class="col-lg-5">
                        <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -98,7 +98,7 @@
 </header>
 <main>
     <!-- ------some collaction------- -->
-<section class="container my-5">
+<section class="container my-5 collaction">
   
         <div class="row g-4">
           <div class="col-lg-4">
@@ -108,7 +108,7 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="p-3 border bg-info  d-flex align-items-center justify-content-between rounded-3">
+            <div class="p-3 border ctg-colur  d-flex align-items-center justify-content-between rounded-3">
                 <h1 class="text-white">bag</h1>
                 <img src="images/categories/bag.png" alt="">
             </div>
@@ -124,8 +124,8 @@
 </section>
  <!-- --------end.------- -->
 </main>
-<section class="container">
-    <h2>shoes</h2>
+<section id="shoes" class="container">
+    <h2>Shoes</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
           <div class="card border-0 shadow-lg h-100">
@@ -135,7 +135,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">buy now</button>
+              <button class="btn rjb-btn-colur">buy now</button>
             </div>
           </div>
         </div>
@@ -147,7 +147,7 @@
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
             <div class="m-3">
-                <button class="btn btn-warning">buy now</button>
+                <button class="btn rjb-btn-colur">buy now</button>
             </div>
           </div>
         </div>
@@ -159,13 +159,13 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="m-3">
-                <button class="btn btn-warning">buy now</button>
+                <button class="btn rjb-btn-colur">buy now</button>
             </div>
           </div>
         </div>
       </div>
 </section>
-<section class="container my-5">
+<section id="backpard" class="container my-5">
     <h2>Backpard</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
@@ -176,7 +176,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">buy now</button>
+              <button class="btn rjb-btn-colur">buy now</button>
             </div>
           </div>
         </div>
@@ -188,7 +188,7 @@
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
             <div class="m-3">
-                <button class="btn btn-warning">buy now</button>
+                <button class="btn rjb-btn-colur">buy now</button>
             </div>
           </div>
         </div>
@@ -200,14 +200,25 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="m-3">
-                <button class="btn btn-warning">buy now</button>
+                <button class="btn rjb-btn-colur">buy now</button>
             </div>
           </div>
         </div>
       </div>
 </section>
-<footer>
+<!-- subsucribe -->
+<section id="Subscribe" style="height: 400px;" class="container rjb-color d-flex justify-content-center align-items-center rounded-3">
+    <div>
+        <h1>LET'S STAY IN TOUCH</h1>
+        <p>Get updates on sales, specials and more</p>
+        <input class="form-control" type="text" placeholder="Enter Your Gmail"> 
+        <br>
 
+        <button class="btn rjb-btn-colur">submit</button>
+    </div>
+</section>
+<footer class="mt-5 text-center ">
+<p><small>©2022. Rajbari E-Shop. All rights reserved. Sofia, Bulgaria.</small></p>
 </footer>
 
     <!------------ bootstrap js ------------->
